The jar in the seek configuration file are downloaded if needed. local file can be loaded for class loader creation
git-svn-id: svn+ssh://solsvn.oma.be/home/sidc/ssr/SWHV_repos/trunk/client/jhv-3d-wcs@1675 b4e469a2-07ce-4b26-9273-4d7d95a670c7